spacing issue fixed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -74,7 +74,6 @@
 * {
   box-sizing: border-box;
   padding: 0;
-  margin: 0;
   font-family: nunito;
 }
 
@@ -83,6 +82,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   background-color: var(--background-primary);
+  margin: 0px;
 }
 
 a {
@@ -147,8 +147,22 @@ main {
   padding: 0 !important;
   min-height: calc(60vh - 7vh) !important;
   margin-left: 8px;
-  white-space: normal !important;
+  /* white-space: normal !important; */
+  /* line-height: auto; */
   /* font-size: ; */
+}
+.ql-editor blockquote,
+.ql-editor h1,
+.ql-editor h2,
+.ql-editor h3,
+.ql-editor h4,
+.ql-editor h5,
+.ql-editor h6,
+.ql-editor ol,
+.ql-editor p,
+.ql-editor pre,
+.ql-editor ul {
+  margin: 0 0 1rem 0 !important;
 }
 .ql-container {
   border: none !important;
@@ -157,11 +171,12 @@ main {
   left: 0 !important;
   font-style: normal !important;
   margin-left: 8px;
+  /* margin-top: 1rem; */
 }
 .ql-toolbar.ql-snow {
   padding: 0 !important;
   border: 0 !important;
-  margin-bottom: 20px;
+  margin-bottom: 1rem;
 }
 
 @media screen and (max-width: 768px) {
